
[[bin]]
name = "irc_robot"
path = "src/main.rs"

[[bin]]
name = "db_tools"
path = "src/db_tools.rs"

[package]
name = "irc_robot"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]

[dependencies]
regex = "*"
rand = "*"
hyper = "*"
mio = "*"
bson = "*"
mongodb = "*"
image = "*"
rustc-serialize = "*"
